### Voltaire's Nightmare Changelog ###

# Hotfix 1 #

-Fixes for the following mission trees: Alania, Barcelona, Breton REL, Brandenburg, Karlings, Kiev, Volga Bulgaria
-Fixed a bunch of advisor icons not showing correctly
-Changed Saxon stem duchy's country name
-Fixed Roger II of Sicily's incorrect regnal number

# v 2.0.0 #

Due to the sheer magnitude of changes from previous versions this will be far from a complete changelog, but rather a brief summary of the major changes in this expansion:

-Complete overhaul and expansion of the map with several thousand new provinces, and dozens of new tags
-Innumerable history tweaks
-Several new cultures and religions
-More fleshed out bookmarks
-Many more new decisions
-Several new trade goods
-Completely redone development values for 1054 (dev for more dates forthcoming)
-Reworked trade node map - more nodes across the board
-Area and region map completely reworked
-New Crusade mechanic
-New Ostsiedlung mechanic (partly tied to Crusades)
-New Norman Invasion of Ireland event chain
-New Plague event chain
-Many more events affecting prices of trade goods
-More Women in History events
-More events for different religions, governments etc.
-Dozens more new flavour events and event chains
-Major balance and quality of life changes across the board
-Reworked Kingdom of the Franks into Kievan Rus
-8 new disasters
-Several new unique government reforms
-9 new Imperial Incidents (Emperor)
-Reworked HRE reform order
-New estates such as the Mamluks
-Over 80 new unique mission trees for tags across the map
-Over 75 new National Idea sets
-Several new mercenary companies
-Hundreds more Dynamic Province Names
-3 new buildings (early versions of tax, government and production)
-9 new loading screens
-More Colonial Regions
-Various GFX tweaks and additions