@@ -73,16 +73,39 @@ country_event = {
 	option = {
 		name = "EVTOPTA9451"
 		kill_heir = yes
-		random_owned_province = {
+		if = {
 			limit = {
-				NOT = {
-					has_building = temple
-				}
-				NOT = { has_building = cathedral }
-				num_free_building_slots = 1
+				NOT = { adm_tech = 36 }
 			}
-			add_building = temple
+			random_owned_province = {
+				limit = {
+					NOT = {
+						has_building = monument
+					}
+					NOT = { 
+						OR = {
+							has_building = temple 
+							has_building = cathedral
+						}
+					}
+					num_free_building_slots = 1
+				}
+				add_building = monument
+			}
 		}
+		else = {
+			random_owned_province = {
+				limit = {
+					NOT = {
+						has_building = temple
+					}
+					NOT = { has_building = cathedral }
+					num_free_building_slots = 1
+				}
+				add_building = temple
+			}
+		}
+		
 	}
 	
 	option = {
