@@ -27,8 +27,8 @@
  obj_christian_convert_desc: "Wechselt die Staatsreligion zur protestantischer,  anabaptistischen, reformierter oder anglikanischer Religion."
  obj_asian_trade: "Exotischer Handel"
  obj_asian_trade_desc: "Erhaltet den Handelsbonus von Seide, Pfirsich oder Karmin."
- obj_emperor_of_china: "König der Franken"
- obj_emperor_of_china_desc: "Seid der König der Franken mit einer Feudalen Autorität von über 50."
+ obj_emperor_of_china: "Großfürst der Rus"
+ obj_emperor_of_china_desc: "Seid der Großfürst der Rus mit einer Fraternität von über 50."
  obj_colonial_empire_desc: "Habt zwei Kolonialnationen als Untertanen."
  obj_centralized: "Zentralisierter Staat"
  obj_centralized_desc: "Habt eine durchschnittliche Autonomie von null, während Ihr über 50 Provinzen besitzt."
