@@ -447,7 +447,7 @@
  ISNT_CELESTIAL_EMPEROR: "Ist NICHT der Großfürst der Rus"
  CELESTIAL_DECISION_MINIMUM_TO_ENACT: "Benötigt ein Minimum von $MINVALUE|Y$ Fraternität, um diese Entscheidung zu erlassen."
  CELESTIAL_DECISION_NOT_ENOUGH_MANDATE: "Diese Entscheidung kostet $MANDATECOST|Y$ Fraternität. Ihr habt aber nur $CURRENTMANDATE|Y$ Fraternität."
- CELESTIAL_DECISION_NOT_EMPEROR: "Muss der §YKönig der Franken§! sein, um fränkische Reformen zu verabschieden."
+ CELESTIAL_DECISION_NOT_EMPEROR: "Muss der §YGroßfürst der Rus§! sein, um  russische Reformen zu verabschieden."
  MANDATE_GROWTH_MODIFIERS: "Modifikatoren, die das monatliche §YFraternitätswachstum§! beeinflussen:"
  CURRENT_CELESTIAL_EMPEROR: "$RULERNAME|Y$ ist der momentane Großfürst der Rus"
  positive_mandate: "Positive Fraternität"
