@@ -6,6 +6,8 @@
 -Fixed a bunch of advisor icons not showing correctly
 -Changed Saxon stem duchy's country name
 -Fixed Roger II of Sicily's incorrect regnal number
+-Fixed Temples being given by a Dynastic event before tech 36
+-Small localisation fixes
 
 # v 2.0.0 #
 
